fixed text overflow for chat bubble, played around with little hover animations, made messages 'send from the bottom', added feature to auto scroll to the bottom (need to change it so it only scrolls to the bottom if the user is currently AT the bottom), separated the username from the chat bubble (now it's smaller and white underneath)

--- a/src/App.css
+++ b/src/App.css
@@ -34,41 +34,84 @@ html, body, #root {
   flex: 1; 
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
 
 /*Spacing for the chat; this is also where the chat messages will be shown */
 .chat-messages {
   flex: 1;
   padding: 20px;
-  /*Added code for message page scrolling*/
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  flex-grow: 1;
 }
 
-/*Visual styling for the border of each individual message on the chat display.*/
+/* styles for specifically the message of each chat bubble */
 .message-bubble {
   background: #e0e0e0;
   color: black;
-  padding: 8px;
-  border-radius: 5px;
-  align-self: flex-start;
+  padding: 8px 12px;
+  border-radius: 10px;
   max-width: 60%;
+  overflow-wrap: break-word; 
+  word-break: break-word;
+  overflow-wrap: break-word; 
+  word-break: break-word;
+  hyphens: auto;
+  -webkit-hyphens: auto;
+  
+  transition: transform 0.1s ease, box-shadow 0.1s ease;
+}
+
+.message-container.sent .message-bubble:hover {
+  transform: scale(1.005) translateX(-2px);
+  box-shadow: 0px 0px 2px #4ef3ff;
+}
+.message-container.received .message-bubble:hover {
+  transform: scale(1.005) translateX(2px);
+  box-shadow: 0px 0px 2px #ebebeb;
+}
+
+/* container for the bubble, and username. default styles */
+.message-container {
+  display: flex;
+  /* align-self: flex-start; */
+  flex-direction: column;
+  width: 100%;
+  /* height: 100%; */
+  text-align: left;
+}
+
+/* pushed first message down so messages appear to send from the bottom, up */
+.message-container:first-child {
+  margin-top: auto;
 }
 
 /* User's messages */
-.message-bubble.sent {
-  align-self: flex-end;
+.message-container.sent {
+  align-items: flex-end;
+}
+.message-container.sent .message-bubble {
   background-color: #4ebcff;
-  color: black;
 }
 
 /* Other people's messages */
-.message-bubble.received {
-  align-self: flex-start;
-  background: #8b8b8b;
-  color: black;
+.message-container.received {
+  align-items: flex-start;
+}
+.message-container.received .message-bubble {
+  background-color: #8b8b8b;
+}
+
+/* the little username tag underneath the bubble */
+.sent-by {
+  font-size: smaller;
+  color: white;
+  margin: 5px 0px 0px 0px;
+  padding: 0px;
+  /* line-height: 5px; */
 }
 
 /*Message input area; this is where a chat box will be created for user input. */
